--- a/AperiTech/AperiTech.csproj
+++ b/AperiTech/AperiTech.csproj
@@ -12,6 +12,8 @@
 
     <ItemGroup>
         <PackageReference Include="Bogus" Version="34.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
