DI Pattern: options pattern

--- a/AperiTech/AperiTech.csproj
+++ b/AperiTech/AperiTech.csproj
@@ -20,4 +20,10 @@
         <ProjectReference Include="..\AperiTech.Domain\AperiTech.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
