--- a/AperiTech/AperiTech.csproj
+++ b/AperiTech/AperiTech.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Bogus" Version="34.0.1"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="6.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
